[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemy Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Enemy.tex" type="Texture" id=3]

[sub_resource type="Animation" id=1]

resource_name = "Enemy Movement"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1, 1.3, 1.7, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 0.25, 4, 0.25, 4, 1 ),
"update": 0,
"values": [ Vector2( 260.194, 80 ), Vector2( 260.194, 80 ), Vector2( 865.519, 459.18 ), Vector2( 865.519, 459.18 ), Vector2( 260.195, 448.022 ), Vector2( 260.195, 448.022 ), Vector2( 260.194, 80 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "Red_Flash"
length = 0.4
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Hit:visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.14, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 20.7775

[sub_resource type="Animation" id=4]

resource_name = "Enemy Movement"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1, 1.3, 1.7, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 0.25, 4, 0.25, 4, 1 ),
"update": 0,
"values": [ Vector2( 260.194, 80 ), Vector2( 260.194, 80 ), Vector2( 865.519, 459.18 ), Vector2( 865.519, 459.18 ), Vector2( 260.195, 448.022 ), Vector2( 260.195, 448.022 ), Vector2( 260.194, 80 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "New Anim"
length = 1.0
loop = false
step = 0.1

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
"Bullet_death",
]]

position = Vector2( 260.194, 80 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/margin = 0.08
script = ExtResource( 1 )
Enemy_bullet = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 3 )

[node name="Anim1" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/Enemy Movement = SubResource( 1 )
anims/Red_Flash = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Enemy Movement"

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.98
one_shot = false
autostart = true

[node name="Enemybulspawn" type="Position2D" parent="."]

position = Vector2( -21.6073, -0.583977 )

[node name="Hit" type="Sprite" parent="."]

visible = false
texture = ExtResource( 3 )
self_modulate = Color( 1, 0, 0, 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Enemy",
]]

input_pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Transform2D( 1, 0, 0, 0.994241, 0, -0.204704 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Collision" type="CollisionShape2D" parent="Area2D"]

position = Vector2( 0, -0.204704 )
scale = Vector2( 1, 0.994241 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="Anim2" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/Enemy Movement = SubResource( 4 )
anims/New Anim = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Enemy Movement"

[connection signal="timeout"  from="Timer"  to="." method="_on_Timer_timeout" binds=[  ]]

[connection signal="area_entered"  from="Area2D"  to="." method="_on_Area2D_area_enter" binds=[  ]]
